--- a/browser/components/securitylevel/content/securityLevelPanel.inc.xhtml
+++ b/browser/components/securitylevel/content/securityLevelPanel.inc.xhtml
@@ -23,9 +23,10 @@
     </html:p>
     <html:p id="securityLevel-summary"></html:p>
     <html:a
+      is="moz-support-link"
       id="securityLevel-learnMore"
+      tor-manual-page="security-settings"
       data-l10n-id="security-level-panel-learn-more-link"
-      href="https://mullvad.net/en/browser/hard-facts#security-levels"
     ></html:a>
   </vbox>
   <hbox class="panel-footer">
